--- a/RecordSheet/views/base.html
+++ b/RecordSheet/views/base.html
@@ -9,11 +9,11 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="csrf-token" content="{{ses['csrf-token']}}">
-    <title>RecordSheet{{sep}}{{title}}</title>
     <link href="/static/base.css" rel="stylesheet" />
     <link href="/static/print.css" rel="stylesheet" media="print" />
     <script type='text/javascript' src='/static/lib/knockout-3.3.0.js'></script>
-    <script type='text/javascript' src='/static/rs/main.js'></script>
+    <script type='text/javascript' src='/static/main.js'></script>
+    <title>RecordSheet{{sep}}{{title}}</title>
 </head>
 <body>
 <header>
