--- a/RecordSheet/views/reports/pl_report.html
+++ b/RecordSheet/views/reports/pl_report.html
@@ -1,5 +1,7 @@
 % rebase('base.html', title='RecordSheet')
 %fmt_name = lambda s: s.split(':')[-1]
+% tot_income = 0
+% tot_expense = 0
 <link href="/static/reports.css" rel="stylesheet" />
 <section>
     <h1>{{entity}}</h1>
@@ -15,7 +17,8 @@
         </tbody>
         <tfoot>
         % if income:
-            <tr><td colspan="2">{{sum(e.acct_bal for e in income)}}</td></tr>
+            % tot_income = sum(e.acct_bal for e in income)
+            <tr><td colspan="2">{{tot_income}}</td></tr>
         % else:
             <tr><td>No Income</td></tr>
         % end
@@ -33,10 +36,24 @@
         </tbody>
         <tfoot>
         % if expenses:
-            <tr><td colspan="2">{{sum(e.acct_bal for e in expenses)}}</td></tr>
+            % tot_expense = sum(e.acct_bal for e in expenses)
+            <tr><td colspan="2">{{tot_expense}}</td></tr>
         % else:
             <tr><td>No Expenses</td></tr>
         % end
         </tfoot>
+    </table>
+    <table class="pl">
+        % total = tot_income - tot_expense
+        <thead>
+        % if total > 0:
+            <tr><td colspan="2">Total Profits</td></tr>
+        % else:
+            <tr><td colspan="2">Total Losses</td></tr>
+        % end
+        </thead>
+        <tbody>
+            <tr><td>{{abs(total)}}</td></tr>
+        </tbody>
     </table>
 </section>
