Ditch bcrypt for hashlib.pbkdf2_hmac (99 problems and bcrypt ain't one)
Moved the authentication logic to the dbapi and removed it from dbmodels
Updated requirements.txt

--- a/RecordSheet/views/me.html
+++ b/RecordSheet/views/me.html
@@ -1,7 +1,7 @@
 % rebase('base.html', title='RecordSheet')
 % ses = www_session()
 <section>
-    <form method=POST action="/me/password">
+    <form method=POST action="{{url('me_pw')}}">
         <h3>Change password</h3>
         <label>Current password</label>
         <input type=password name=password /><br/>
