--- a/RecordSheet/views/reports/trial_balance.html
+++ b/RecordSheet/views/reports/trial_balance.html
@@ -1,6 +1,5 @@
-% rebase('base.html', title='RecordSheet')
+% rebase('base.html', title='RecordSheet', extra_css=['reports.css'])
 % import datetime
-<link href="/static/reports.css" rel="stylesheet" />
 <section>
 <h1>Trial Balance</h1>
 <h3>{{datetime.date.today()}}</h3>
