--- a/RecordSheet/views/base.html
+++ b/RecordSheet/views/base.html
@@ -11,6 +11,9 @@
     <meta name="csrf-token" content="{{ses['csrf-token']}}">
     <link href="{{url('static', filename='base.css')}}" rel="stylesheet" />
     <link href="{{url('static', filename='print.css')}}" rel="stylesheet" media="print" />
+% for css in get('extra_css', []):
+    <link href="{{url('static', filename=css)}}" rel="stylesheet"/>
+% end
     <script type='text/javascript' src="{{url('static', filename='knockout-3.3.0.js')}}"></script>
     <script type='text/javascript' src="{{url('static', filename='main.js')}}"></script>
     <title>RecordSheet{{sep}}{{title}}</title>
