--- a/RecordSheet/views/reports/pl_form.html
+++ b/RecordSheet/views/reports/pl_form.html
@@ -1,6 +1,5 @@
-% rebase('base.html', title='RecordSheet')
+% rebase('base.html', title='RecordSheet', extra_css=['reports.css'])
 % import datetime
-<link href="/static/reports.css" rel="stylesheet" />
 % year = datetime.date.today().year
 <section>
     <form class="pl-form" action="profit_and_loss/pl?">
