--- a/RecordSheet/views/base.html
+++ b/RecordSheet/views/base.html
@@ -9,6 +9,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="csrf-token" content="{{ses['csrf-token']}}">
+    <meta name="app-root" content="{{request['SCRIPT_NAME']}}">
     <link href="{{url('static', filename='base.css')}}" rel="stylesheet" />
     <link href="{{url('static', filename='print.css')}}" rel="stylesheet" media="print" />
 % for css in get('extra_css', []):
