--- a/RecordSheet/views/account_chart.html
+++ b/RecordSheet/views/account_chart.html
@@ -8,7 +8,7 @@
     </thead>
     <tbody data-bind="foreach: accounts">
         <tr>
-            <td ><a data-bind="text: name, attr:{href:'/accounts/'+id}"></td>
+            <td ><a data-bind="text: name, attr:{href: baseUrl+'/accounts/'+id}"></td>
             <td data-bind="text: desc"></td>
         </tr>
     </tbody>
