--- a/RecordSheet/views/batch.html
+++ b/RecordSheet/views/batch.html
@@ -1,7 +1,5 @@
-% rebase('base.html', title='Batch')
-% import decimal, json
 <section>
 <h1>Batch: {{batch.id}}</h1>
-<div>Posted {{batch.datetime}} by {{batch.user.name}}</div>
+<div>Entry: {{batch.user.name}}</div>
+%include('journal.html', journals=batch.journal)
 </section>
-%include('journal.stub', journals=batch.journal)
