--- a/RecordSheet/views/incomplete.html
+++ b/RecordSheet/views/incomplete.html
@@ -1,6 +1,6 @@
 % rebase('base.html', title='RecordSheet')
 <section>
-<h1>Incomplete Transactions</h1>
+<h1>Imported Transaction Data</h1>
 <table class="import">
     <thead>
         <tr>
