--- a/RecordSheet/views/reports/index.html
+++ b/RecordSheet/views/reports/index.html
@@ -1,8 +1,9 @@
 % rebase('base.html', title='Reports')
 <section>
-    <h2>Available Reports</h2>
+    <h2>Reports</h2>
     <ul>
         <li><a href="{{url('trial_balance')}}">Trial Balance</a></li>
         <li><a href="{{url('pl_selector')}}">Profit and loss</a></li>
+        <li><a href="{{url('imbalanced')}}">Imbalanced Transactions</a></li>
     </ul>
 </section>
