--- a/RecordSheet/views/journal.html
+++ b/RecordSheet/views/journal.html
@@ -2,23 +2,27 @@
 <section>
 <table class="journal">
     <thead>
-        <tr><th>Date Time</th><th>Description</th><th></th></tr>
-        <tr><th>Account</th><th></th><th>Amount</th></tr>
+        <tr><th>Date Time</th><th>Account</th><th>Amount</th></tr>
     </thead>
-    <tbody>
 % for journal in journals:
+    <tbody>
         <tr>
-            <td>{{journal.fmt_datetime}}</td>
-            <td colspan="2">{{journal.desc}}</td>
+            <td colspan=2>{{journal.fmt_datetime}}</td>
+            <td>
         </tr>
-    % for post in journal.posts:
+    % for idx, post in enumerate(journal.posts):
         <tr>
-            <td><a  href="{{url('account_view', id=post.account_id)}}">{{post.account.name}}</a></td>
-            <td>{{post.memo}}</td>
+            <td></td>
+            <td><a href="{{url('account_view', id=post.account_id)}}">{{post.account.name}}</a></td>
             <td {{!'class="redneg"' if post.amount < 0 else ''}}>{{post.fmt_amount}}</td>
         </tr>
     % end
-% end
+        <tr>
+            <td></td>
+            <td>{{journal.desc}}</td>
+            <td></td>
+        </tr>
     </tbody>
+% end
 </table>
 </section>
