--- a/RecordSheet/views/account.html
+++ b/RecordSheet/views/account.html
@@ -4,18 +4,17 @@
 <span>Balance {{sum([p.amount for p in account.posts])}}</span>
 <table class="ledger">
     <thead>
-            <tr><th>Date Time</th><th>Seq</th><th>Batch</th><th></th></tr>
-            <tr><th colspan="3">Memo</th><th colspan="2">Amount</th></tr>
+            <tr><th>Date Time</th><th>Batch</th><th></th></tr>
+            <tr><th colspan="2">Memo</th><th colspan="2">Amount</th></tr>
     </thead>
     <tbody>
     % for post in account.posts:
         <tr><td>{{post.journal.fmt_datetime}}</td>
-            <td>{{post.seq}}</td>
             <td><a href="{{url('batch_view', id=post.journal.batch_id)}}">{{post.journal.batch_id}}</a></td>
             <td></td>
         </tr>
         <tr>
-            <td colspan="3"><a href="{{url('journal_entry_view', id=post.journal.id)}}">{{post.memo or post.journal.memo}}</a></td></td>
+            <td colspan="2"><a href="{{url('journal_entry_view', id=post.journal.id)}}">{{post.memo or post.journal.memo}}</a></td></td>
             <td>{{post.fmt_amount}}</td>
         </tr>
     % end
